--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-color: var(--light-background);
+    background: radial-gradient(var(--light-background), var(--secondary-icon-color));
 }
 
 .container {
@@ -35,6 +35,7 @@ body {
 .container .card {
     width: 100%;
     background-color: var(--white-color);
+    box-shadow: 0 5px 15px rgba(0,0,0,0.25);
 }
 
 
@@ -58,6 +59,67 @@ body {
 
 .container .card:hover .imgBx img {
     transform: scale(1.5);
+}
+
+.action {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
+
+.action li {
+    position: relative;
+    list-style: none;
+    width: 40px;
+    height: 40px;
+    background: var(--white-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 4px;
+    cursor: pointer;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.15);
+    transform: translateX(60px);
+}
+
+.container .card:hover .action li {
+    transform: translateX(0);
+    transition: calc(0.2s * var(--i));
+}
+
+.action li:hover {
+    background: var(--secondary-icon-color);
+    color: var(--white-color);
+}
+
+.action li span {
+    position: absolute;
+    right: 50px;
+    top: 50%;
+    transform: translateY(-50%) translateX(-20px);
+    white-space: pre;
+    background: var(--white-color);
+    color: var(--dark-font-color);
+    font-weight: 500;
+    font-size: 12px;
+    border-radius: 4px;
+    pointer-events: none;
+    opacity: 0;
+    transition: 0.5s;
+}
+
+.action li:hover span {
+    opacity: 1;
+    transform: translateY(-50%) translateX(0px);
+}
+
+.action li span::before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    right: -4px;
+    width: 8px;
+    height: 8px;
 }
 
 .container .card .content {
